// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/ContentSidebar/Skills/SidebarSkillsCard should render an error from the error code 1`] = `
<Status
  card={
    Object {
      "skill_card_type": "status",
    }
  }
/>
`;

exports[`components/ContentSidebar/Skills/SidebarSkillsCard should render face component 1`] = `
<Faces
  card={
    Object {
      "skill_card_type": "face",
    }
  }
  getPreviewer={[MockFunction]}
/>
`;

exports[`components/ContentSidebar/Skills/SidebarSkillsCard should render keywords component 1`] = `
<Keywords
  card={
    Object {
      "skill_card_type": "keyword",
    }
  }
  getPreviewer={[MockFunction]}
/>
`;

exports[`components/ContentSidebar/Skills/SidebarSkillsCard should render nothing if invalid type 1`] = `""`;

exports[`components/ContentSidebar/Skills/SidebarSkillsCard should render timelines component 1`] = `
<Faces
  card={
    Object {
      "skill_card_type": "timeline",
    }
  }
  getPreviewer={[MockFunction]}
/>
`;

exports[`components/ContentSidebar/Skills/SidebarSkillsCard should render transcript component 1`] = `
<Transcript
  card={
    Object {
      "skill_card_type": "transcript",
    }
  }
  getPreviewer={[MockFunction]}
/>
`;
